--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta property="og:description" content="Business Analytics professional with 3+ years of experience turning complex data into actionable insights. I help drive smarter decisions through performance analytics, dashboards, and AI-powered solutions." />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://curious-dusk-c5345d.netlify.app/" />
-    <meta property="og:image" content="https://curious-dusk-c5345d.netlify.app/preview-rishika.png" />
+    <meta property="og:image" content="https://curious-dusk-c5345d.netlify.app/preview-nidhi.png" />
     <meta property="og:image:width" content="1090" />
     <meta property="og:image:height" content="792" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:alt" content="Nidhi Sharma - Business Analytics Professional Portfolio" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="https://curious-dusk-c5345d.netlify.app/preview-rishika.png" />
+    <meta name="twitter:image" content="https://curious-dusk-c5345d.netlify.app/preview-nidhi.png" />
     <meta name="twitter:image:alt" content="Nidhi Sharma - Business Analytics Professional Portfolio" />
   </head>
 
